atlas/main/default/objects/Carrier_Flag_History__c/Carrier_Flag_History__c.object-meta.xml
<CustomObject>
    <label>Carrier Flag History</label>
    <nameField>
        <displayFormat>FLAG-{0000}</displayFormat>
        <label>Flag ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carrier Flag Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>