atlas/main/default/objects/Carrier_Flag_History__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Carrier_Flag_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>