atlas/main/default/objects/Carrier_Flag_History__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Flag History</relationshipLabel>
    <relationshipName>Flag_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>