atlas/main/default/objects/Carrier_Flag_History__c/fields/Flag_Type__c.field-meta.xml
<CustomField>
    <fullName>Flag_Type__c</fullName>
    <label>Flag Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Blacklist</fullName><default>false</default><label>Blacklist</label></value>
            <value><fullName>Double Broker</fullName><default>false</default><label>Double Broker</label></value>
            <value><fullName>Stolen Load</fullName><default>false</default><label>Stolen Load</label></value>
            <value><fullName>Whitelist</fullName><default>false</default><label>Whitelist</label></value>
            <value><fullName>Removed from Blacklist</fullName><default>false</default><label>Removed from Blacklist</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>