atlas/main/default/objects/Carrier_Flag_History__c/fields/Flagged_By__c.field-meta.xml
<CustomField>
    <fullName>Flagged_By__c</fullName>
    <label>Flagged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Carrier_Flags</relationshipName>
    <type>Lookup</type>
</CustomField>